# rust-web-server-example

./: .env  Cargo.toml  diesel.toml  rustfmt.toml
migrations/2025-08-06-054127_user/: up.sql
src/: lib.rs  main.rs  run_app.rs  schema.rs
src/handlers/: mod.rs  user.rs  utils.rs
src/models/: user.rs
src/routes/: auth.rs  mod.rs  routes.rs  test.rs  user.rs
src/state/: app_state.rs
