[package]
name = "axume_project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.140"
tower-http = {version="0.6.6", features=["cors"]}
jsonwebtoken= "9.3.1"
anyhow= "1.0.98"
chrono= {version="0.4.41",features=["serde"]}
dotenvy = "0.15.7"
diesel = { version = "2.2.12", features = ["postgres", "serde_json","uuid", "chrono"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
bcrypt = "0.17.0"
# argon2 = "0.5.3"
# # rand = "0.9.2"
# rand_core = "0.9.3"
